--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="./style.css">
     <script type="text/javascript" src="./script.js"></script>
     <link href="http://fonts.cdnfonts.com/css/ocr-a-extended" rel="stylesheet">
-    <title>SGPCS</title>
+    <link rel="shortcut icon" href="./atom_icon_191749.ico">
+    <title>website update system</title>
 </head>
 <body>
     <div class="contents show">
@@ -65,6 +66,16 @@
         </div>
     </div>
     <div class="contents page7">
+        <div class="img-div">
+            <img src="./what_you_need.webp">
+        </div>
+    </div>
+    <div class="contents page2">
+        <div class="img-div">
+            <img src="./About_what_you_need.webp">
+        </div>
+    </div>
+    <div class="contents page5">
         <div class="img-div">
             <img src="./How_to_use.webp">
         </div>
