--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
     </div>
     <div class="contents page1">
         <div class="img-div">
-            <img src="./What_is_my_creation.webp">
+            <img src="./what_the_system_is_all_about.webp">
         </div>
     </div>
     <div class="contents page2">
         <div class="img-div">
-            <img src="./About_what_is_my_creation.webp">
+            <img src="./about_what_the_system_is_all_about.webp">
         </div>
     </div>
     <div class="contents page3">
@@ -62,27 +62,27 @@
     </div>
     <div class="contents page6">
         <div class="img-div">
-            <img src="./About_features.webp">
+            <img src="./about_features.webp">
         </div>
     </div>
     <div class="contents page7">
         <div class="img-div">
-            <img src="./what_you_need.webp">
+            <img src="./thing_you_have_to_prepare.webp">
         </div>
     </div>
     <div class="contents page2">
         <div class="img-div">
-            <img src="./About_what_you_need.webp">
+            <img src="./about_things_you_have_to_prepare.webp">
         </div>
     </div>
     <div class="contents page5">
         <div class="img-div">
-            <img src="./How_to_use.webp">
+            <img src="./how_to_use.webp">
         </div>
     </div>
     <div class="contents page8">
         <div class="img-div">
-            <img src="./About_how_to_use.webp">
+            <img src="./about_how_to_use.webp">
         </div>
     </div>
     <div class="contents page9">
@@ -92,12 +92,12 @@
     </div>
     <div class="contents page10">
         <div class="img-div">
-            <img src="./Image_compression.webp">
+            <img src="./image_compression_system_in_using_squoosh_CLI.webp">
         </div>
     </div>
     <div class="contents page11">
         <div class="img-div">
-            <img src="./About_image_compression.webp">
+            <img src="./about_image_compression_system_in_using_squoosh_CLI.webp">
         </div>
     </div>
     <div class="contents page12">
