--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     </div>
     <div class="contents page6">
         <div class="img-div">
-            <img src="./about_features.webp">
+            <img src="./about_feature.webp">
         </div>
     </div>
     <div class="contents page7">
@@ -77,7 +77,7 @@
     </div>
     <div class="contents page5">
         <div class="img-div">
-            <img src="./how_to_use.webp">
+            <img src="./how_to__use.webp">
         </div>
     </div>
     <div class="contents page8">
