--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     </div>
     <div class="contents page8">
         <div class="img-div">
-            <img src="./about_how_to_use.webp">
+            <img src="./about_how_to__use.webp">
         </div>
     </div>
     <div class="contents page9">
